--- a/DataSet Iris 3D.ipynb
+++ b/DataSet Iris 3D.ipynb
@@ -179,6 +179,7 @@
     }
    ],
    "source": [
+    "# Load DataSet\n",
     "Flower = datasets.load_iris(as_frame = True)\n",
     "Flower.frame"
    ]
@@ -190,6 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define Features\n",
     "X = Flower.data\n",
     "y = Flower.target"
    ]
@@ -242,7 +244,7 @@
    "source": [
     "class_names = Flower.target_names\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0) # \n",
     "\n",
     "\n",
     "classifier = svm.SVC(kernel=\"linear\", C=0.1).fit(X_train, y_train)\n",
