--- a/Immo California.ipynb
+++ b/Immo California.ipynb
@@ -1,23 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ded65389",
+   "metadata": {},
+   "source": [
+    "# Prédiction Immobilier California"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8077f11f",
+   "metadata": {},
+   "source": [
+    "L'objectif est d'estimer les futurs prix d'un bien immobilier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a439f17c",
+   "metadata": {},
+   "source": [
+    "Dans ce cas nous avons affaire à un machine learning supervisé, en utilisant la régression linéaire."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9adca60e",
+   "metadata": {},
+   "source": [
+    "Grace a ce notebook vous saurez comment faire une regression linéaire et faire une estimation (prédiction). Avant de vous lancer  lisez le ReadMe disponible sur Github."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0732adff",
+   "metadata": {},
+   "source": [
+    "# Les librairies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b9906e",
+   "metadata": {},
+   "source": [
+    "Importation des librairies nécessaires et du dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "0744c430",
+   "execution_count": 10,
+   "id": "14b5c63d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83c9a7dc",
+   "metadata": {},
+   "source": [
+    "La première étape est d'importer le dataset et de le changer en dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "0e28aae6",
    "metadata": {},
    "outputs": [],
@@ -26,8 +84,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff39f80d",
+   "metadata": {},
+   "source": [
+    "Faire un print sur un DESCR te permet d'afficher une descriptions bien formattée. Cela permet de vérifier les données manquantes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "da44c8ba",
    "metadata": {},
    "outputs": [
@@ -90,8 +156,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fd377c0",
+   "metadata": {},
+   "source": [
+    "On utilise .frame pour avoir le dataset correctement présenté. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "36140423",
    "metadata": {},
    "outputs": [
@@ -295,18 +369,27 @@
        "[20640 rows x 9 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Ici nous avons les différents colonnes.\n",
     "Immo.frame"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a1c8fac",
+   "metadata": {},
+   "source": [
+    "On va voir ces données sous la forme d'histogrammes pour visualiser les fréquences de répartition des données pour chaque feature (colonnes)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "29baaee5",
    "metadata": {},
    "outputs": [
@@ -324,15 +407,21 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "Immo.frame.hist(figsize=(10, 10), bins=30, edgecolor=\"black\")\n",
-    "plt.subplots_adjust(hspace=0.7, wspace=0.4)\n"
+    "plt.subplots_adjust(hspace=0.7, wspace=0.4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "312fd98e",
+   "metadata": {},
+   "source": [
+    "On peut aussi le voir sous forme de nuage de points avec les features Longitude et Latitude. Représentation de California :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "b43ee35a",
    "metadata": {},
    "outputs": [
@@ -342,7 +431,7 @@
        "<AxesSubplot:xlabel='Longitude', ylabel='Latitude'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -364,8 +453,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a7d3b4d",
+   "metadata": {},
+   "source": [
+    "Ici on peut voir les prix des maisons par rapport aux longitude et latitude. Plus c'est clair, plus c'est cher."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "2f0fd019",
    "metadata": {},
    "outputs": [
@@ -392,6 +489,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f09511e",
+   "metadata": {},
+   "source": [
+    "Nous pouvons faire une analyse finale en faisant un tracé par paire de toutes les features et targets, mais sans la longitude et la latitude. Nous quantifierons la target de manière à pouvoir créer un histogramme approprié."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "id": "a1cb5804",
@@ -411,8 +516,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "rng = np.random.RandomState(0)\n",
     "indices = rng.choice(np.arange(Immo.frame.shape[0]), size=500,\n",
     "                     replace=False)\n",
@@ -424,6 +527,30 @@
     "subset[\"MedHouseVal\"] = subset[\"MedHouseVal\"].apply(lambda x: x.mid)\n",
     "\n",
     "_ = sns.pairplot(data=subset, hue=\"MedHouseVal\", palette=\"viridis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35a9115a",
+   "metadata": {},
+   "source": [
+    "# Code de Modèle de Régression Linéaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fbd8241",
+   "metadata": {},
+   "source": [
+    "On passe sur la partie apprentissage de la machine. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac269488",
+   "metadata": {},
+   "source": [
+    "Ici on garde 20% des données pour faire des tests et 80% pour l'entraîner."
    ]
   },
   {
@@ -512,12 +639,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a338878",
+   "cell_type": "markdown",
+   "id": "ed4d05c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "Maintenant vous savez comment faire un régression linéaire. Si vous avez des difficulté à comprendre certaines parties allez chercher sur Internet cela pourrait vous aidez à résoudre le problème."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a0b5f43",
+   "metadata": {},
+   "source": [
+    "Si vous avez résussi jusqu'ici vous pouvez tenter de changer les features (paramètres) pour voir les changements et vous amuser."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c38e1f1",
+   "metadata": {},
+   "source": [
+    "# Crédit : Lakhbir SINGH"
+   ]
   }
  ],
  "metadata": {
