--- a/California Test WO Comment.ipynb
+++ b/California Test WO Comment.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9f202fee",
+   "metadata": {},
+   "source": [
+    "# Prédiction Immobilier California"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd1a2e15",
+   "metadata": {},
+   "source": [
+    "L'objectif est d'estimer les futurs prix d'un bien immobilier.\n",
+    "\n",
+    "Dans ce cas nous avons affaire à un machine learning supervisé, en utilisant la régression linéaire.\n",
+    "\n",
+    "Grace a ce notebook vous saurez comment faire une regression linéaire et faire une estimation (prédiction)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03330237",
+   "metadata": {},
+   "source": [
+    "# Les librairies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "693f0431",
+   "metadata": {},
+   "source": [
+    "Importation des librairies nécessaires et du dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "7e9213b6",
@@ -12,6 +48,16 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn.datasets import fetch_california_housing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8732e09",
+   "metadata": {},
+   "source": [
+    "La première étape est d'importer le dataset et de le changer en dataframe.\n",
+    "\n",
+    "Faire un print sur un DESCR te permet d'afficher une descriptions bien formattée."
    ]
   },
   {
@@ -80,6 +126,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ddcfaa6",
+   "metadata": {},
+   "source": [
+    "On utilise .frame pour avoir le dataset correctement présenté."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "id": "33d1f8c7",
@@ -121,6 +175,14 @@
    ],
    "source": [
     "print(House.frame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3cbfbb",
+   "metadata": {},
+   "source": [
+    " Cela permet de vérifier les données manquantes."
    ]
   },
   {
