--- a/Immo California.ipynb
+++ b/Immo California.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ded65389",
+   "id": "cbe8d6c2",
    "metadata": {},
    "source": [
     "# Prédiction Immobilier California"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8077f11f",
+   "id": "8bf69909",
    "metadata": {},
    "source": [
     "L'objectif est d'estimer les futurs prix d'un bien immobilier."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a439f17c",
+   "id": "1b63d86b",
    "metadata": {},
    "source": [
     "Dans ce cas nous avons affaire à un machine learning supervisé, en utilisant la régression linéaire."
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9adca60e",
+   "id": "6a4001d4",
    "metadata": {},
    "source": [
-    "Grace a ce notebook vous saurez comment faire une regression linéaire et faire une estimation (prédiction). Avant de vous lancer  lisez le ReadMe disponible sur Github."
+    "Grace a ce notebook vous saurez comment faire une regression linéaire et faire une estimation (prédiction)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0732adff",
+   "id": "f26f3fce",
    "metadata": {},
    "source": [
     "# Les librairies"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b9906e",
+   "id": "e710ebd3",
    "metadata": {},
    "source": [
     "Importation des librairies nécessaires et du dataset."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "14b5c63d",
+   "id": "54b705ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c9a7dc",
+   "id": "ac9be8e7",
    "metadata": {},
    "source": [
     "La première étape est d'importer le dataset et de le changer en dataframe."
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff39f80d",
+   "id": "e8b23c94",
    "metadata": {},
    "source": [
     "Faire un print sur un DESCR te permet d'afficher une descriptions bien formattée. Cela permet de vérifier les données manquantes."
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd377c0",
+   "id": "39a61dfc",
    "metadata": {},
    "source": [
     "On utilise .frame pour avoir le dataset correctement présenté. "
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a1c8fac",
+   "id": "2f1caef9",
    "metadata": {},
    "source": [
     "On va voir ces données sous la forme d'histogrammes pour visualiser les fréquences de répartition des données pour chaque feature (colonnes)."
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312fd98e",
+   "id": "698ddc85",
    "metadata": {},
    "source": [
     "On peut aussi le voir sous forme de nuage de points avec les features Longitude et Latitude. Représentation de California :"
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7d3b4d",
+   "id": "2236a64f",
    "metadata": {},
    "source": [
     "Ici on peut voir les prix des maisons par rapport aux longitude et latitude. Plus c'est clair, plus c'est cher."
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f09511e",
+   "id": "f729b146",
    "metadata": {},
    "source": [
     "Nous pouvons faire une analyse finale en faisant un tracé par paire de toutes les features et targets, mais sans la longitude et la latitude. Nous quantifierons la target de manière à pouvoir créer un histogramme approprié."
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a9115a",
+   "id": "9d5b0d61",
    "metadata": {},
    "source": [
     "# Code de Modèle de Régression Linéaire"
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fbd8241",
+   "id": "41a837f9",
    "metadata": {},
    "source": [
     "On passe sur la partie apprentissage de la machine. "
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac269488",
+   "id": "c2c04b87",
    "metadata": {},
    "source": [
     "Ici on garde 20% des données pour faire des tests et 80% pour l'entraîner."
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4d05c7",
+   "id": "b951b4ba",
    "metadata": {},
    "source": [
     "# Conclusion\n",
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a0b5f43",
+   "id": "aa868bb6",
    "metadata": {},
    "source": [
     "Si vous avez résussi jusqu'ici vous pouvez tenter de changer les features (paramètres) pour voir les changements et vous amuser."
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c38e1f1",
+   "id": "c27392fc",
    "metadata": {},
    "source": [
     "# Crédit : Lakhbir SINGH"
