--- a/digits.ipynb
+++ b/digits.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2635892e",
+   "metadata": {},
+   "source": [
+    "# Training of numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5429a7e",
+   "metadata": {},
+   "source": [
+    "Problématique étudiée\n",
+    "\n",
+    "La problématique étudiée est le cas avec le dataset hand-written digits. L'objectif de ce cas est de reconnaître des chiffres annotés à la main à partir d'une base de données disponible.\n",
+    "\n",
+    "Il s'agit donc d'un cas de machine learning supervisé, et plus spécifiquement d'un cas de classification.\n",
+    "\n",
+    "Ce notebook va vous guider à travers ce cas concret de classification, et va utiliser un modèle particulier de machine learning pour réaliser cette tâche : les SVM (Support-Vector Machine). Les parties suivantes sont dédiées à l'implémentation de ce modèle grâce à l'utilisation de la librairie scikit-learn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc8b418a",
+   "metadata": {},
+   "source": [
+    "# Importation des différentes librairies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "35882b2f",
@@ -13,6 +43,14 @@
     "from sklearn import svm\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "775d6643",
+   "metadata": {},
+   "source": [
+    "La première étape est d'importer le dataset et de voir de quoi il est constitué. Ici on importe le dataset hand-written digits."
    ]
   },
   {
@@ -167,6 +205,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "303c0bb9",
+   "metadata": {},
+   "source": [
+    " Nous choisissons le modèle à mettre en place, nous l'apprenons, et nous le testons:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "116a7c9d",
@@ -174,6 +220,18 @@
    "outputs": [],
    "source": [
     "mod = svm.SVC(kernel='linear' , gamma=0.1 , C=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a0317ba",
+   "metadata": {},
+   "source": [
+    "Puis, nous divisons notre jeu de données d'entrée en deux sous-ensembles, afin de constituer nos jeux de données d'apprentissage (constitué ici de 50 % des données de départ), et de test (50 % des données de départ).\n",
+    "\n",
+    "Si vous souhaitez voir les différences de résultat en fonction de la taille des données test, vous devrez changé le paramètre test_size qui indique le pourcentage de donnée que vous selectionné dans test.\n",
+    "\n",
+    "Cependant attention à ne pas lui donnée une valeure trop basse en pensant que votre modèle sera meilleure car vous risqueriez le sur-apprentissage. C'est-à-dire que votre modèle va se complexifier et ne sera plus assez général et vous perdrez donc en précision. Je vous invite à essayer avec une valeure de 0.1 et de comparer avec celle actuelle pour vérifiez cela."
    ]
   },
   {
@@ -211,6 +269,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f652806e",
+   "metadata": {},
+   "source": [
+    " Enfin, nous regardons quelques résultats de prédiction, pour voir de manière qualitative si le modèle semble bien fonctionner"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "3d2bd0f1",
@@ -244,16 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "05173e6f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC(C=1, gamma=0.1, kernel='linear')\n",
-      "0.9731543624161074\n"
+     "ename": "NameError",
+     "evalue": "name 'mod' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmod\u001b[49m\u001b[38;5;241m.\u001b[39mfit(x_train,y_train)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(mod)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(mod\u001b[38;5;241m.\u001b[39mscore(x_test, y_test))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mod' is not defined"
      ]
     }
    ],
@@ -264,12 +333,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffcf55e",
+   "cell_type": "markdown",
+   "id": "46de9e6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pour conclure, nous avons pu voir qu'un modèle simple tel que le SVM fonctionne très bien pour ce problème car il arrive à trouver 97% de bonne réponse. Il nous permet en plus de ça de trouver le résultat de manière très rapide, quasiment instantanné. Cela nous montre donc qu'il ne faut pas utiliser un modèle qui utilise un réseaux de neuronne, bien plus long en terme de calcul, pour trouver notre réponse. de la même façon que l'on utilise pas un lance flamme pour allumer un barbecue !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "319720f7",
+   "metadata": {},
+   "source": [
+    "Ceci conclut notre tutoriel, et sentez-vous libre de jouer avec les paramètres du modèle pour mieux le comprendre !"
+   ]
   }
  ],
  "metadata": {
