--- a/DataSet Iris 3D.ipynb
+++ b/DataSet Iris 3D.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "723520f3",
+   "metadata": {},
+   "source": [
+    "# Tutoriel d'exemple de résolution d'un problème de Machine Learning\n",
+    " \n",
+    "## Problématique étudiée\n",
+    " \n",
+    "### Laproblématique étudié est le cas avec le dataset iris. L'objectif de ce cas est de pouvoir regrouper des iris dans leur catégorie à partir de leurs caractéristiques.\n",
+    "\n",
+    "#### Il s'agit donc d'un cas de machine learning non supervisé, et plus spécifiquement d'un cas de clustering (regroupement).\n",
+    "\n",
+    "#### Ce notebook va vous guider à travers ce cas concret de clustering, et va utiliser un modèle particulier de machine learning pour réaliser cette tâche : les K-means. Les parties suivantes sont dédiées à l'implémentation de ce modèle grâce à l'utilisation de la librairie sickit-learn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52cd523f",
+   "metadata": {},
+   "source": [
+    "# Code\n",
+    "\n",
+    "## Importation des différentes libraires"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "577d7558",
@@ -13,6 +39,16 @@
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn import decomposition\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7df951ab",
+   "metadata": {},
+   "source": [
+    "## Importation du dataset\n",
+    "\n",
+    "La première étape est d'importer le dataset et de voir de quoi il est constitué. ici on importe le dataset iris."
    ]
   },
   {
@@ -244,9 +280,11 @@
    "source": [
     "class_names = Flower.target_names\n",
     "\n",
+    "# Split the data into a training set and a test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0) # \n",
     "\n",
-    "\n",
+    "# Run classifier, using a model that is too regularized (C too low) to see\n",
+    "# the impact on the results\n",
     "classifier = svm.SVC(kernel=\"linear\", C=0.1).fit(X_train, y_train)\n",
     "\n",
     "np.set_printoptions(precision=2)\n",
@@ -271,6 +309,22 @@
     "    print(disp.confusion_matrix)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5690796b",
+   "metadata": {},
+   "source": [
+    "# Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc4ff91",
+   "metadata": {},
+   "source": [
+    "Nous allons représenter cette matrix sous forme visuel en 3D"
    ]
   },
   {
@@ -326,20 +380,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f7493fd",
+   "cell_type": "markdown",
+   "id": "2c38133e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef19682f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "De ce que nous pouvons voir Les setosa correspondrait aux groupe 2 prédit par notre modèle, les versicolor à notre groupe 1 et les virginica au groupe 3!\n",
+    " \n",
+    "Nous avons donc réussi à reclasser ces données uniquement à partir de leurs Attributes. "
+   ]
   }
  ],
  "metadata": {
